<resources>

    <string name="app_name">My Calculator Mcn</string>
    <string name="emptyStr"></string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">My Calculator</string>
    <string name="MemoryTextView">M:</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button.">.</string>
    <string name="buttonDivide">/</string>
    <string name="buttonMul">*</string>
    <string name="buttonPlus">+</string>
    <string name="buttonMinus">-</string>
    <string name="buttonEquals">=</string>
    <string name="button0">0</string>
    <string name="buttonPlusMinus">+/-</string>
    <string name="Mplus">M+</string>
    <string name="Mminus">M-</string>
    <string name="BS">BS</string>
    <string name="C">C</string>
    <string name="MR">MR</string>
    <string name="MC">MC</string>
    <string name="buttonPerc">%</string>
    <string name="buttonSqr">√</string>

</resources>