<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutLinear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/txtCalc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:enabled="false"
        android:focusable="false"
        android:gravity="bottom"
        android:inputType="numberDecimal"
        android:longClickable="false"
        android:singleLine="true"
        android:text="@string/emptyStr"
        android:textSize="56sp"
        android:textStyle="normal"
        android:typeface="normal" />

    <TextView
        android:id="@+id/memTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:focusable="false"
        android:longClickable="false"
        android:text="@string/emptyStr"
        android:textColor="#fff"
        android:textSize="20sp"
        android:textStyle="normal"
        android:typeface="normal" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btnMP"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="0px"
                android:text="@string/Mplus"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <Button
                android:id="@+id/btnMM"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="0px"
                android:text="@string/Mminus"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <Button
                android:id="@+id/btnMR"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="0px"
                android:text="@string/MR"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <Button
                android:id="@+id/btnMC"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="0px"
                android:text="@string/MC"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <Button
                android:id="@+id/btnBS"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="0px"
                android:text="@string/BS"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="serif" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btnSeven"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="0px"
                android:text="@string/button7"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <Button
                android:id="@+id/btnEight"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="0px"
                android:text="@string/button8"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <Button
                android:id="@+id/btnNine"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="0px"
                android:text="@string/button9"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <Button
                android:id="@+id/btnDivide"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="0px"
                android:text="@string/buttonDivide"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <Button
                android:id="@+id/btnC"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="0px"
                android:text="@string/C"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="serif" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btnFour"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="0px"
                android:text="@string/button4"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <Button
                android:id="@+id/btnFive"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="0px"
                android:text="@string/button5"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <Button
                android:id="@+id/btnSix"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="0px"
                android:text="@string/button6"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <Button
                android:id="@+id/btnMultiply"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="0px"
                android:text="@string/buttonMul"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <Button
                android:id="@+id/btnPerc"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="0px"
                android:text="@string/buttonPerc"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="serif" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btnOne"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="0px"
                android:text="@string/button1"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <Button
                android:id="@+id/btnTwo"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="0px"
                android:text="@string/button2"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <Button
                android:id="@+id/btnThree"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="0px"
                android:text="@string/button3"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <Button
                android:id="@+id/btnMinus"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="0px"
                android:text="@string/buttonMinus"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <Button
                android:id="@+id/btnSqrRoot"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="0px"
                android:text="@string/buttonSqr"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="serif" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btnZero"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="0px"
                android:text="@string/button0"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <Button
                android:id="@+id/btnDecimal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="0px"
                android:text="@string/button."
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <Button
                android:id="@+id/btnPM"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="0px"
                android:text="@string/buttonPlusMinus"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <Button
                android:id="@+id/btnPlus"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="0px"
                android:text="@string/buttonPlus"
                android:textSize="23sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <Button
                android:id="@+id/btnEquals"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="0px"
                android:text="@string/buttonEquals"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="serif" />
        </TableRow>
    </TableLayout>

</LinearLayout>